--- a/lib/chapter3.tex
+++ b/lib/chapter3.tex
@@ -230,8 +230,27 @@ Debido al gran porcentaje de valores faltantes en las variables descriptivas: \t
             Series Temporales & 2 & \textit{Frecuencia Cardíaca} y \textit{Saturación de O$_2$} \\ 
             \hline
         \end{tabular}
-    \caption{Variables Cualitativas y Cuantitativas Dentro del \textit{Scope} habiendo excluido aquellas variables que muestran alta cantidad de faltantes}\label{tabla:variables_estudio_final}
+    \caption{Variables Cualitativas y Cuantitativas Dentro del \textit{Scope} habiendo excluido aquellas variables que muestran alta cantidad de faltantes}
+    \label{tabla:variables_estudio_final}
 \end{table}
+
+Si se considera el \textit{scope} del estudio las 8 primeras horas de monitorización: 
+
+\begin{table}[H]
+    \centering
+        \begin{tabular}{| m{5cm} | m{1.75cm} | m{7cm} |}
+            \hline Tipo de Variable & Cantidad & Nombres  \\ \hline
+            Cuantitativas & 6 & Edad, Peso, Edad Gestacional (EG), Frecuencia Respiratoria (0 - 8 h),
+            Flujo O$_2$ (0 - 8 h). \\ \hline
+            Cualitativas & 22 & Sexo, Palivizumab, Lactancia Materna (LM), Dermatitis, Alergias, Tabaco, Enfermedad Base, Radiografía, Analítica, Suero, Etiología, Prematuridad, Alimentación, Sonda Nasogástrica, Gafas Nasales al Ingreso, OAF, UCIP, Deterioro, Pausas de Apnea, Score Cruces Ingreso, SAPI (0 - 8 h), Score Wood-Downes Ingreso. \\ \hline
+            Otras & 1 & Identificador Paciente. \\ \hline
+            Series Temporales & 2 & \textit{Frecuencia Cardíaca} y \textit{Saturación de O$_2$} \\ 
+            \hline
+        \end{tabular}
+    \caption{Variables Cualitativas y Cuantitativas Dentro del \textit{Scope} = 8h habiendo excluido aquellas variables que muestran alta cantidad de faltantes}
+    \label{tabla:variables_estudio_final_2}
+\end{table}
+
 
 Por otro lado se ha estudiado que variables suelen faltar juntas. En la siguiente Imagen \ref{fig:missing-descriptive-cross} se muestra la distribución de datos faltantes cruzados de las 6 variables con mayor número de datos faltantes de la anterior Figura \ref{fig:missing-descriptive}.
 
