--- a/lib/chapter5-FCC.tex
+++ b/lib/chapter5-FCC.tex
@@ -1,11 +1,11 @@
-\subsubsection{FACC}
+\subsubsection{FCC}
 
-\paragraph{Dendrograma de los clústeres obtenidos}
+\paragraph{Dendrograma de los clústeres obtenidos para FCC}
 
 \begin{figure}[H]
     \centering
     \includegraphics[scale = 0.8]{img/06-1-ccf.png}
-    \caption{Dendograma }
+    \caption{Dendograma usando FCC}
     \label{fig:ccf_den}
 \end{figure}
 
@@ -14,16 +14,16 @@
 \begin{figure}[H]
     \centering
     \includegraphics[scale = 0.8]{img/06-2-ccf.png}
-    \caption{Cluster Plot}
+    \caption{Cluster Plot usando FCC}
     \label{fig:ccf_pc}
 \end{figure}
 
-\paragraph{Puntuación de Silhouette de los clústeres obtenidos}
+\paragraph{Puntuación de Silhouette de los clústeres obtenidos para FCC}
 
 \begin{figure}[H]
     \centering
     \includegraphics[scale = 0.8]{img/06-3-ccf.png}
-    \caption{Silhouette Plot}
+    \caption{Silhouette Plot usando FCC}
     \label{fig:ccf_si}
 \end{figure}
 
@@ -32,11 +32,11 @@
 \begin{figure}[H]
     \centering
     \includegraphics[scale = 0.8]{img/06-4-ccf.png}
-    \caption{Dendograma Plot k = 2}
+    \caption{Dendograma Plot k = 2 usando FCC}
     \label{fig:ccf_ctg}
 \end{figure}
 
-\paragraph{Clasificación mediente Random Forest de los clústeres según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final}}
+\paragraph{Clasificación mediente Random Forest de los clústeres según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} para FCC}
 
 \begin{figure}[H]
     \centering
@@ -52,7 +52,7 @@ Confusion matrix:
 1 46  3  0.06122449
 2  5 37  0.11904762
     \end{lstlisting}
-    \caption{Resultado de Random Forest utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}\label{fig:random_forest_ccf_result_1}
+    \caption{Resultado de Random Forest usando FCC utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}\label{fig:random_forest_ccf_result_1}
 \end{figure}
 
 \paragraph{Mean Decrease Accuracy de las 5 primeras variables descriptivas utilizadas en Random Forest}
@@ -70,10 +70,10 @@ Confusion matrix:
         ETIOLOGIA & 2.6061721 \\
         \bottomrule
     \end{tabular}
-    \caption{Mean Decrease Accuracy}
+    \caption{Mean Decrease Accuracy usando FCC}
 \end{table}
 
-\paragraph{Clasificación mediente Random Forest de los clústeres según Peridiograma utilizada para genear los mismos} 
+\paragraph{Clasificación mediente Random Forest de los clústeres según Peridiograma utilizada para genear los mismos para FCC} 
 
 \begin{figure}[H]
     \centering
