--- a/lib/chapter5-Peridiograma.tex
+++ b/lib/chapter5-Peridiograma.tex
@@ -1,6 +1,6 @@
 \subsubsection{Peridiograma}
 
-\paragraph{Dendrograma de los clústeres obtenidos}
+\paragraph{Dendrograma de los clústeres obtenidos para Peridiograma}
 
 \begin{figure}[H]
     \centering
@@ -8,7 +8,7 @@
     \subfigure[\textit{HR}]{\includegraphics[width=0.45\textwidth]{img/01-1-per.png}}
     \subfigure[\textit{HR\_scaled}]{\includegraphics[width=0.45\textwidth]{img/02-1-per.png}}
     \subfigure[\textit{HR\_quantile}]{\includegraphics[width=0.5\textwidth]{img/03-1-per.png}}
-    \caption{Dendogramas de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}
+    \caption{Dendogramas usando Peridiograma de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}
     \label{fig:per_den_fc}
 \end{figure}
 
@@ -16,7 +16,7 @@
     \centering
     \subfigure[\textit{SpO2}]{\includegraphics[width=0.5\textwidth]{img/04-1-per.png}}\hfill
     \subfigure[\textit{SpO2\_scaled}]{\includegraphics[width=0.5\textwidth]{img/05-1-per.png}}
-    \caption{Dendogramas de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:per_den_spo2}
+    \caption{Dendogramas usando Peridiograma de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:per_den_spo2}
 \end{figure}
 
 \paragraph{Distribución de los clústeres obtenidos en función de las dos primeras componentes principales}
@@ -26,7 +26,7 @@
     \subfigure[\textit{HR}]{\includegraphics[width=0.45\textwidth]{img/01-2-per.png}}
     \subfigure[\textit{HR\_scaled}]{\includegraphics[width=0.45\textwidth]{img/02-2-per.png}}
     \subfigure[\textit{HR\_quantile}]{\includegraphics[width=0.5\textwidth]{img/03-2-per.png}}
-    \caption{Cluster Plot de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}
+    \caption{Cluster Plot usando Peridiograma de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}
     \label{fig:per_pc_fc}
 \end{figure}
 
@@ -34,7 +34,7 @@
     \centering
     \subfigure[\textit{SpO2}]{\includegraphics[width=0.5\textwidth]{img/04-2-per.png}}\hfill
     \subfigure[\textit{SpO2\_scaled}]{\includegraphics[width=0.5\textwidth]{img/05-2-per.png}}
-    \caption{Cluster Plot de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:per_pc_spo2}
+    \caption{Cluster Plot usando Peridiograma de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:per_pc_spo2}
 \end{figure}
 
 
@@ -45,34 +45,34 @@
     \subfigure[\textit{HR}]{\includegraphics[width=0.45\textwidth]{img/01-3-per.png}}
     \subfigure[\textit{HR\_scaled}]{\includegraphics[width=0.45\textwidth]{img/02-3-per.png}}
     \subfigure[\textit{HR\_quantile}]{\includegraphics[width=0.5\textwidth]{img/03-3-per.png}}
-    \caption{Silhouette Plot de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}\label{fig:per_si_fc}
+    \caption{Silhouette Plot usando Peridiograma de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}\label{fig:per_si_fc}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
     \subfigure[\textit{SpO2}]{\includegraphics[width=0.5\textwidth]{img/04-3-per.png}}\hfill
     \subfigure[\textit{SpO2\_scaled}]{\includegraphics[width=0.5\textwidth]{img/05-3-per.png}}
-    \caption{Silhouette Plot de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:per_si_spo2}
+    \caption{Silhouette Plot usando Peridiograma de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:per_si_spo2}
 \end{figure}
 
-\paragraph{Dendograma dividido en dos clústeres según los pacientes que han experimentado OAF}
+\paragraph{Dendograma dividido en dos clústeres según los pacientes que han experimentado OAF para Peridiograma}
 
 \begin{figure}[H]
     \centering
     \subfigure[\textit{HR}]{\includegraphics[width=0.45\textwidth]{img/01-4-per.png}}
     \subfigure[\textit{HR\_scaled}]{\includegraphics[width=0.45\textwidth]{img/02-4-per.png}}
     \subfigure[\textit{HR\_quantile}]{\includegraphics[width=0.5\textwidth]{img/03-4-per.png}}
-    \caption{Dendograma Plot k = 2 de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}\label{fig:per_ctg_fc}
+    \caption{Dendograma Plot k = 2 usando Peridiograma de \textit{HR}, \textit{HR\_scaled} y \textit{HR\_quantile}}\label{fig:per_ctg_fc}
 \end{figure}
 
 \begin{figure}[ht]
     \centering
     \subfigure[\textit{SpO2}]{\includegraphics[width=0.5\textwidth]{img/04-4-per.png}}\hfill
     \subfigure[\textit{SpO2\_scaled}]{\includegraphics[width=0.5\textwidth]{img/05-4-per.png}}
-    \caption{Dendograma Plot k = 2 de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:per_ctg_spo2}
+    \caption{Dendograma Plot k = 2 usando Peridiograma de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:per_ctg_spo2}
 \end{figure}
 
-\paragraph{Clasificación mediente Random Forest de los clústeres según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final}}
+\paragraph{Clasificación mediente Random Forest de los clústeres según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} para Peridiograma}
 
 \begin{figure}[H]
     \centering
@@ -88,7 +88,7 @@ Confusion matrix:
 1 49  1   0.0200000
 2  5 38   0.1162791
     \end{lstlisting}
-    \caption{Resultado de Random Forest para \textit{HR} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}\label{fig:random_forest_per_result_1}
+    \caption{Resultado de Random Forest usando Peridiograma para \textit{HR} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}\label{fig:random_forest_per_result_1}
 \end{figure}
 \begin{figure}[H]
     \centering
@@ -104,7 +104,7 @@ Confusion matrix:
 1 28 8   0.2222222
 2 14 8   0.6363636
     \end{lstlisting}
-    \caption{Resultado de Random Forest para \textit{HR\_scaled} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}
+    \caption{Resultado de Random Forest usando Peridiograma para \textit{HR\_scaled} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}
     \label{fig:random_forest_per_result_2}
 \end{figure}
 
@@ -122,7 +122,7 @@ Confusion matrix:
 1 47  3  0.06000000
 2  1 42  0.02325581
     \end{lstlisting}
-    \caption{Resultado de Random Forest para \textit{HR\_quantile} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}
+    \caption{Resultado de Random Forest usando Peridiograma para \textit{HR\_quantile} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}
     \label{fig:random_forest_per_result_3}
 \end{figure}
 
@@ -140,7 +140,7 @@ Confusion matrix:
 1 48  2   0.0400000
 2  5 38   0.1162791
     \end{lstlisting}
-    \caption{Resultado de Random Forest para \textit{SpO2} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}\label{fig:random_forest_per_result_4}
+    \caption{Resultado de Random Forest usando Peridiograma para \textit{SpO2} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}\label{fig:random_forest_per_result_4}
 \end{figure}
 \begin{figure}[H]
     \centering
@@ -156,11 +156,11 @@ Confusion matrix:
 1 41  4  0.08888889
 2  8 31  0.20512821
     \end{lstlisting}
-    \caption{Resultado de Random Forest para \textit{SpO2\_scaled} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}
+    \caption{Resultado de Random Forest usando Peridiograma para \textit{SpO2\_scaled} utilizando variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} y clasificación de clusters k = 2}
     \label{fig:random_forest_per_result_5}
 \end{figure}
 
-\paragraph{Mean Decrease Accuracy de las 5 primeras variables descriptivas utilizadas en Random Forest}
+\paragraph{Mean Decrease Accuracy de las 5 primeras variables descriptivas utilizadas en Random Forest para Peridiograma}
 
 \begin{table}[H]
     \centering
@@ -175,7 +175,7 @@ Confusion matrix:
         PESO & 2.6165359 \\
         \bottomrule
     \end{tabular}
-    \caption{Mean Decrease Accuracy \textit{HR}}
+    \caption{Mean Decrease Accuracy usando Peridiograma \textit{HR}}
 \end{table}
 
 \begin{table}[H]
@@ -191,7 +191,7 @@ Confusion matrix:
         SCORE\_WOOD\_DOWNES\_INGRESO & 2.0989243 \\
         \bottomrule
     \end{tabular}
-    \caption{Mean Decrease Accuracy \textit{HR\_scaled}}
+    \caption{Mean Decrease Accuracy usando Peridiograma \textit{HR\_scaled}}
 \end{table}
 
 \begin{table}[H]
@@ -207,7 +207,7 @@ Confusion matrix:
         EDAD & 2.9220530 \\
         \bottomrule
     \end{tabular}
-    \caption{Mean Decrease Accuracy \textit{HR\_quantile}} 
+    \caption{Mean Decrease Accuracy usando Peridiograma \textit{HR\_quantile}} 
 \end{table}
 
 \begin{table}[H]
@@ -223,7 +223,7 @@ Confusion matrix:
         TABACO & 2.4803961 \\
         \bottomrule
     \end{tabular}
-    \caption{Mean Decrease Accuracy \textit{SpO2}}
+    \caption{Mean Decrease Accuracy usando Peridiograma \textit{SpO2}}
 \end{table}
 
 \begin{table}[H]
@@ -239,11 +239,11 @@ Confusion matrix:
         SCORE\_CRUCES\_INGRESO & 3.3041235 \\
         \bottomrule
     \end{tabular}
-    \caption{Mean Decrease Accuracy \textit{SpO2\_scaled}}
+    \caption{Mean Decrease Accuracy usando Peridiograma \textit{SpO2\_scaled}}
 \end{table}
 
 
-\paragraph{Clasificación mediente Random Forest de los clústeres según Peridiograma utilizada para genear los mismos} 
+\paragraph{Clasificación mediente Random Forest de los clústeres según Peridiograma utilizada para genear los mismos para Peridiograma} 
 
 \begin{figure}[H]
     \centering
@@ -259,7 +259,7 @@ Confusion matrix:
 1 50 0           0
 2  8 0           1
     \end{lstlisting}
-    \caption{Resultado de Random Forest para \textit{HR} utilizando Peridiograma y clasificación de clusters k = 2}\label{fig:random_forest_per_result_RF_1}
+    \caption{Resultado de Random Forest usando Peridiograma para \textit{HR} utilizando Peridiograma y clasificación de clusters k = 2}\label{fig:random_forest_per_result_RF_1}
 \end{figure}
 \begin{figure}[H]
     \centering
@@ -275,7 +275,7 @@ Confusion matrix:
 1 35  1  0.02777778
 2  7 15  0.31818182
     \end{lstlisting}
-    \caption{Resultado de Random Forest para \textit{HR\_scaled} utilizando Peridiograma y clasificación de clusters k = 2}
+    \caption{Resultado de Random Forest usando Peridiograma para \textit{HR\_scaled} utilizando Peridiograma y clasificación de clusters k = 2}
     \label{fig:random_forest_per_result_RF_2}
 \end{figure}
 
@@ -293,7 +293,7 @@ Confusion matrix:
 1 50 0           0
 2  8 0           1
     \end{lstlisting}
-    \caption{Resultado de Random Forest para \textit{HR\_quantile} utilizando Peridiograma y clasificación de clusters k = 2}
+    \caption{Resultado de Random Forest usando Peridiograma para \textit{HR\_quantile} utilizando Peridiograma y clasificación de clusters k = 2}
     \label{fig:random_forest_per_result_RF_3}
 \end{figure}
 
@@ -311,7 +311,7 @@ Confusion matrix:
 1 50 0       0.000
 2  5 3       0.625
     \end{lstlisting}
-    \caption{Resultado de Random Forest para \textit{SpO2} utilizando Peridiograma y clasificación de clusters k = 2}\label{fig:random_forest_per_result_RF_4}
+    \caption{Resultado de Random Forest usando Peridiograma para \textit{SpO2} utilizando Peridiograma y clasificación de clusters k = 2}\label{fig:random_forest_per_result_RF_4}
 \end{figure}
 \begin{figure}[H]
     \centering
@@ -327,7 +327,7 @@ Confusion matrix:
 1 45 0   0.0000000
 2  7 6   0.5384615
     \end{lstlisting}
-    \caption{Resultado de Random Forest para \textit{SpO2\_scaled} utilizando Peridiograma y clasificación de clusters k = 2}
+    \caption{Resultado de Random Forest usando Peridiograma para \textit{SpO2\_scaled} utilizando Peridiograma y clasificación de clusters k = 2}
     \label{fig:random_forest_per_result_RF_5}
 \end{figure}
 
