--- a/lib/chapter5.tex
+++ b/lib/chapter5.tex
@@ -179,5 +179,13 @@ En esta sección de resultados, presentaremos los hallazgos obtenidos en el \tex
 \include{lib/chapter5-Peridiograma.tex}
 
 \newpage
-\include{lib/chapter5-FACC.tex}
+\include{lib/chapter5-FCC.tex}
 
+\newpage
+\include{lib/chapter5-Adj-Rand-Index.tex}
+
+\newpage
+\include{lib/chapter5-FINAL-MODEL.tex}
+
+\vspace{10pt}
+Los códigos utilizados para el Estudio 2 se encuentran en el Anexo~\ref{sec:anexo3}.
