--- a/lib/chapter6.tex
+++ b/lib/chapter6.tex
@@ -2,3 +2,12 @@
 
 \subsection{Conclusiones}\label{sec:conclusiones}
 
+Una vez finalizado el trabajo de investigación realizado se van a abordar las conclusiones. 
+
+En primer lugar se ha realizado un estudio de los sistemas de monitorización de planta pediátrica de pacientes con cuadro bronquiolitis, se ha concluido que dicha monitorización es una herramienta eficaz para la detección de pacientes de riesgo y que permite la toma de decisiones clínicas de forma temprana a la hora de suministrar OAF.
+
+Se ha evaluado y contrastado si se puede afirmar que los pacientes a los que se les ha aplicado OAF presentan una saturación de oxígeno mayor que los pacientes sin OAF, y si presentan una frecuencia cardíaca mayor. Se ha concluido que de manera general en el espectro de valores de monitorización horarios esto no se puede afirmar de manera significativa, solamente en algunos momentos puntuales se ha observado que los pacientes con OAF presentan una saturación de oxígeno y frecuencia cardíaca mayor que los pacientes sin OAF, y que presentan una frecuencia cardíaca mayor pero no se debería extrapolar a todo el rango horario. 
+
+Se ha pretendido ver si es posible agrupar a los pacientes obtenidos en el estudio y aislar a aquellos que han sufrido \textit{DETERIORO}. Se ha concluido que con los datos utilizados esto es imposible y que el \textit{DETERIORO} es un evento muy complejo que está influenciado por muchos factores, no solo por los datos de monitorización. A la hora de evaluar los diferentes clusters obtenidos ninguno se ha podido asociar a un grupo de pacientes con \textit{DETERIORO}.
+
+Se ha observado como el hecho de transformar la Frecuencia Cardíaca por cuantiles y escalarla ayuda a reducir el hecho de separar los pacientes atendiendo a la \textit{EDAD} 
