--- a/main.tex
+++ b/main.tex
@@ -92,7 +92,7 @@
 \fancyhf{\fontsize{2}{12}\selectfont}
 
 % Contenido del encabezado (\fancyhead):
-\fancyhead[RO]{Título del trabajo} % Texto que se coloca en el encabezado de las páginas impares (O -> 'Odd', o impar) a la izquierda (R -> 'Odd')
+\fancyhead[RO]{Clasificación y predicción de la evolución de la bronquiolotis en pacientes pediátricos mediante el uso de datos de monitorización continua} % Texto que se coloca en el encabezado de las páginas impares (O -> 'Odd', o impar) a la izquierda (R -> 'Odd')
 \fancyhead[LE]{\nouppercase{\rightmark}} % Texto que se coloca en el encabezado de las páginas pares (E -> 'Even', o par) a la izquierda (L -> 'Left'). \rightmark se utiliza para insertar automáticamente el título de la sección correspondiente, y \nouppercase para que no aparezca todo en mayúsculas (formato por defecto de \rightmark).
 
 % Contenido del pie de página (\fancyfoot):
@@ -388,10 +388,10 @@ every picture/.append style={
 \begin{flushright} % Se alinea el texto en el lado derecho de la página.
 \vspace*{5cm} % Se añade un espacio vertical de 5cm para situar la cita en ~1/3 de la página.
 
-\textit{“La cita del trabajo iría aquí”} 
+\textit{“ En realidad, el único momento de la vida en que siento ser yo mismo es cuando estoy con mis amigos”} 
 
 \medskip % Salto a la línea de tamaño medio (existen \smallskip, \medskip y \bigskip)
-- El autor de la cita 
+- Gabriel García Márquez 
 
 \end{flushright}
 
@@ -411,9 +411,11 @@ every picture/.append style={
 
 Agradezco a mis tutores Carolina y Andrés por su apoyo incondicional. Por todas la reuniones y dudas y por ser tan importantes en mi motivación por el mundo de la investigación.  
 
+Gracias a Felipe y Rosa, por ser unos médicos ejemplares en su pasión y dedicación por la investigación en el ámbito pediátrico de la salud,
+
 Doy gracias a mi novia Mariona, por estar a mi lado en todo momento y por ser mi apoyo incondicional en la elaboración de este trabajo, por su inteligencia y por acompañarme y motivarme en todo momento. 
 
-Gracias a mis compañeros Pablo y Ana de la universidad de Aalto por su apoyo y compañía en la elaboración de este trabajo. 
+Gracias a mis compañeros Pablo, Ana, Dani y Loufan de la universidad de Aalto por su apoyo y compañía en la elaboración de este trabajo. 
 
 Gracias a Jose Manuel y Alberto por invitarme a la Universidad de Alcalá, por a presentarme a su equipo y darme la oportunidad de presentar mi trabajo frente a ellos.
 
@@ -514,6 +516,9 @@ Gracias en último lugar a mi familia por ser familia y estar ahí siempre.
 \input{lib/chapter7.tex}
 \newpage
 
+\input{lib/chapter8.tex}
+\newpage
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%% - BIBLIOGRAFÍA - %%%%%%%%%%%%%%%%
@@ -544,6 +549,14 @@ Gracias en último lugar a mi familia por ser familia y estar ahí siempre.
 \newpage
 % ---------------- Segundo anexo --------------- %
 \input{lib/zanexo2.tex}
+\newpage
+
+% ---------------- Tercer anexo --------------- %
+\input{lib/zanexo3.tex}
+\newpage
+
+% ---------------- Cuarto anexo --------------- %
+\input{lib/zanexo4.tex}
 \newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
