--- a/biblio.bib
+++ b/biblio.bib
@@ -13,6 +13,20 @@
    year = {2021},
 }
 
+@article{rand1971objective,
+  author       = {W. M. Rand},
+  title        = {Objective Criteria for the Evaluation of Clustering Methods},
+  journal      = {Journal of the American Statistical Association},
+  volume       = {66},
+  number       = {336},
+  pages        = {846--850},
+  year         = {1971},
+  publisher    = {American Statistical Association},
+  doi          = {10.2307/2284239},
+  url          = {https://www.jstor.org/stable/2284239},
+}
+
+
 @article{schuster1898investigation,
   title     = {On the Investigation of Hidden Periodicities with Application to a Supposed 26 Day Period of Meteorological Phenomena},
   author    = {Arthur Schuster},
